# FiveSecondsHack

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/prompts/: generate-tests.prompt.md  optimize-performance.prompt.md  plan-authorMatchingSubstringTeamFallback.prompt.md  pr-description.prompt.md  refactor-enterprise.prompt.md  secure-api.prompt.md  style-prompt.prompt.md
.github/scripts/: build_release_notes.py  check_outdated_deps.py  validate_version.py  write_version_output.py
.github/workflows/: pipeline.yml
container/: Dockerfile  docker-compose.yml
data/: teams.json
src/: __init__.py  config.py  graph.py  llm.py  main.py  render.py  server.py  sonar.py  state.py
src/prompts/: refactor.md
src/templates/: code_block.html  email_alert.html  email_no_issues.html  status_page.html  styles.css
tests/: conftest.py  test_graph.py  test_llm.py  test_main.py  test_render.py  test_scripts.py  test_server.py  test_sonar.py  test_state.py
