[project]
name = "five-seconds-hack"
version = "1.2.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line too long — HTML/CSS templates make this unavoidable
    "B904",   # raise-without-from inside except — existing pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "E402",   # module-level import not at top — intentional: env vars set before imports
    "F401",   # unused import — test helper imports needed for mock patching
]
"src/main.py" = [
    "E402",   # module-level import not at top — intentional: sys.path must be set before package imports
]
