[project]
name = "five-seconds-hack"
version = "1.3.1"

[tool.ruff]
line-length = 120
# ruff 0.15.x incorrectly strips parentheses from `except (A, B):` clauses when
# target-version is set to py314, producing invalid Python 2 syntax. Keep at
# py312 until ruff adds proper py314 formatter support.
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line too long — HTML/CSS templates make this unavoidable
    "B904",   # raise-without-from inside except — existing pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "E402",   # module-level import not at top — intentional: env vars set before imports
    "F401",   # unused import — test helper imports needed for mock patching
]
"src/main.py" = [
    "E402",   # module-level import not at top — intentional: sys.path must be set before package imports
]
